@@ -1,3 +1,8 @@
+2005-03-31 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
+   * src/gdcmPixelReadConvert.cxx : problems of around of double to uint8, when
+     conversion of YBR to RGB pixels. So, now, the conversion is made using 
+     integers only
+
 2005-03-30 Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
    * Testing/TestAllReadCompareDicom.cxx : now use test files (invented file
      format) to replace 'at-run' dicom files generated by the 
